force-app/main/default/objects/Benefit__c/fields/AnnualEffectiveRate__c.field-meta.xml
<CustomField>
    <fullName>AnnualEffectiveRate__c</fullName>
    <label>AnnualEffectiveRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>