force-app/main/default/objects/Benefit__c/fields/CardName__c.field-meta.xml
<CustomField>
    <fullName>CardName__c</fullName>
    <label>CardName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>