force-app/main/default/objects/Benefit__c/fields/CashBack__c.field-meta.xml
<CustomField>
    <fullName>CashBack__c</fullName>
    <label>CashBack</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>