force-app/main/default/objects/Benefit__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>